[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["BitK <bitk@yeswehack.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-GraphQL = "^2.0.1"
graphene = "^2.1.8"
docker = "^4.4.4"
Flask-Cors = "^3.0.10"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
