[tool.poetry]
name = "pm-manager"
version = "0.1.0"
description = "Web interface for pwn-machine"
authors = ["BitK <bitk@yeswehack.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
docker = "^4.4.4"
pyotp = "^2.6.0"
flask-redis = "^0.4.0"
Flask-Cors = "^3.0.10"
Flask-SocketIO = "^5.0.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

