[tool.poetry]
name = "pwnm-back"
version = "0.1.0"
description = "PwnMachine backend "
authors = ["Maëlys Bras de fer <m.brasdefer@yeswehack.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ariadne = "^0.13"
argon2-cffi = "^20.1"
pyotp = "^2.6"
redis = "^3.5.3"
PyJWT = "^2"
aiofiles = "^0.6"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
